movie info page customized and js behaviour added

--- a/Favorites/favorites.html
+++ b/Favorites/favorites.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1 > Favorites</h1>
+    <h1 > Favorites <span><a href="../index.html">Home</a></span></h1>
     <div class="all-items">
        
         
