--- a/Movie-info/movie-info-home.html
+++ b/Movie-info/movie-info-home.html
@@ -3,53 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>IMDB Clone</title>
     <link rel="stylesheet" href="movie-info-page.css">
 </head>
 <body>
     <div class="container">
-        <img src="https://m.media-amazon.com/images/M/MV5BNDA5OWE3YTUtNjU0Mi00MWI0LTg3ODgtYmUwNzdkNTdiOWQ2XkEyXkFqcGdeQXVyOTI3MzI4MzA@._V1_FMjpg_UX1000_.jpg" alt="">
-    <h1 class="movie-info">Movie info</h1>
+        <img id="background-blur-image" src="..." alt="">
+    <h1 class="movie-info">Movie info <span><a href="../index.html">Home</a></span></h1>
     <div class="all-details">
-        <img src="https://m.media-amazon.com/images/M/MV5BNDA5OWE3YTUtNjU0Mi00MWI0LTg3ODgtYmUwNzdkNTdiOWQ2XkEyXkFqcGdeQXVyOTI3MzI4MzA@._V1_FMjpg_UX1000_.jpg" alt="">
+        <img id="movie-image" src="..." alt="">
         
     <div class="movie-details-head">
         <div>
-        <div id="movie-title">Bhediya</div>
+        <div id="movie-title">...</div>
         <div class="year-duration-info">
-            <span id="year">2012</span>
-            <span id="rated">&nbsp;Not Rated&nbsp;</span>
-            <span id="duration">132 min</span>
+            <span id="year">...</span>
+            <span id="rated">&nbsp;&bull;...&bull;&nbsp;</span>
+            <span id="duration">...</span>
         </div>
        </div>
        <div id="cast-and-info">
-        <div><span class="cast-and-info-heading">Actors</span><span id="actors" class="cast-and-full-info">Charlize Theron, Vin Diesel, Jason Statham, Jordana Brewster, kimmi wellis , rose sen</span></div>
-        <div><span class="cast-and-info-heading">Director</span><span id="director" class="cast-and-full-info">Jason Statham</span></div>
-        <div><span class="cast-and-info-heading">Writer</span><span id="writer" class="cast-and-full-info"> kimmi wellis , rose sen</span></div>
-        <div><span class="cast-and-info-heading">Genre</span><span id="genre" class="cast-and-full-info">action ,crime, drama</span></div>
-        <div><span class="cast-and-info-heading">Language</span><span id="language" class="cast-and-full-info">hindi, english, tamil</span></div>
-        <div><span class="cast-and-info-heading">Released</span><span id="released" class="cast-and-full-info">24 sep 2011</span></div>
-        <div><span class="cast-and-info-heading">Duration</span><span id="duration" class="cast-and-full-info">134 min</span></div>
+        <div><span class="cast-and-info-heading">Actors</span><span id="actors" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Director</span><span id="director" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Writer</span><span id="writer" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Released</span><span id="released" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Genre</span><span id="genre" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Awards</span><span id="awards" class="cast-and-full-info">...</span></div>
+        <div><span class="cast-and-info-heading">Language</span><span id="language" class="cast-and-full-info">...</span></div>
        </div>
 
     </div>
     <div class="rating">
         <div>
         <div id="imdb-rating">Imdb rating</div>
-        <div id="rating"><i class="fa-solid fa-star"></i> 6.6 </div>
+        <div id="rating"><i class="fa-solid fa-star"></i> <span id="rating-val">0.0</span></div>
        </div>
        <div>
         <div id="total-votes">Total votes</div>
-        <div id="vote-count">2797</div>
+        <div id="vote-count">000</div>
        </div>
     </div>
 </div>
 <div class="plot">
     <div id="plot-heading">Storyline </div> 
-    <div id="plot">A vengeful gangster targets and terrorizes an entire police unit and their families.</div>
+    <div id="plot">...</div>
 </div>
 </div>
 <script src="https://kit.fontawesome.com/51457f5ad9.js" crossorigin="anonymous"></script>
-    
+    <script src="movie-info.js"></script>
 </body>
 </html>
